2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Changed the call of 
	an Enterprise function to use HOOK to avoid errors in
	Open version

2013-02-12  Sancho Lerena <slerena@artica.es>

        * extensions/update_manager/load_updatemanager.php
        extensions/update_manager/settings.php
        extensions/update_manager/main.php: removed binary system in 
        update manager. Removed two fields in setup and reformatted
        popup window on update info. This goes in 4.0.3 SP1.

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* extensions/plugin_registration.php: Added a extra Parameter in the 
	conversion of plugins version 1 to 2

2013-02-12  Sergio Martin <sergio.martin@artica.es>

	* extensions/plugin_registration.php: Recommit the last fix of
	plugin registration

2012-02-12  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: tserver table type is now InnoDB after modifying
	some indexes which was causing locks and corruption.

2013-02-11  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager/load_updatemanager.php: Removed the keygen
	  from update manager since it was not working well.

2013-02-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_network_components.php
	godmode/modules/manage_network_components_form.php: Fix the default
	interval when create network component. Fix the clone network components
	fields to update all of them for bug 3595231

2013-02-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	general/header.php: Move some javascript and css inclusions
	from header file to ui_process_page_head function to still 
	having this files when in full screen mode 

2013-02-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Fix pagination on users list

2013-02-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_servers.php, extensions/plugin_registration.php:
	cleaned source code.
	